<?xml version="1.0" encoding="utf-8"?>
<!-- vim: set ts=4 sw=4 et: -->
<resources>
    <string name="app_name">Fil@Tours</string>
    <string name="lblStopDeparture">Departure</string>
    <string name="lblStopArrival">Arrival</string>
    <string name="sensPrompt">Arriving/Departing</string>
    <string name="lblCriteria">Search criteria</string>
    <string name="btnGetJourney">Get journey</string>
    <string name="msgErrorTitle">Error</string>
    <string name="msgInfoTitle">Info</string>
    <string name="okay">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="scrapping">Scrapping ...</string>
    <string name="startHttpScrapping">Starting to scrap.</string>
    <string name="jsoupConnect">Initiating connection</string>
    <string name="jsoupDocReady">Document ready</string>
    <string name="networkError">Network error!</string>
    <string name="scrappSuccess">Successfully scrapped</string>
    <string name="scrappError">Error while scrapping</string>
    <string name="scrapping_progress_raz">Got cleanup page</string>
    <string name="journey_list">List of journeys</string>
    <string name="jsoupAskRaz">Asked for clearing</string>
    <string name="jsoupGotRaz">Got clearing, taking off</string>
    <string name="jsoupGotEtapePeriode">Got step and period</string>
    <string name="jsoupPostedForm">Form has been submitted</string>
    <string name="jsoupGotNavig">Got a reply with navigation</string>
    <string name="jsoupGotPropositions">Found propositions</string>
    <string name="jsoupGotJourneys">Found journeys</string>
    <string name="jsoupGotTrip">Added a trip</string>
    <string name="jsoupStartGetDetails">Requesting details</string>
    <string name="jsoupGotDetails">Got details page</string>
    <string name="noDetails">No details</string>
    <string name="noDetailsTxt">No details for this journey</string>
    <string name="jsoupGotDetailsTable">Found table for details</string>
    <string name="jsoupGotDetailsElems">Found elements for details</string>
    <string name="jsoupGotFullDetails">Full journey details fetched</string>
    <string name="journey_details">Details of journey</string>
    <string name="stopIndic">At stop</string>
    <string name="detailMount">Get in</string>
    <string name="detailLine">Line:</string>
    <string name="detailDirection">Direction:</string>
    <string name="detailUmount">Get off</string>
    <string name="connectionInfo">Connection</string>
    <string name="connectionDuration">Waiting time:</string>
    <string name="walkIndic">Walk from</string>
    <string name="detailWalkFrom">From stop:</string>
    <string name="detailWalkTo">To stop:</string>
    <string name="duration">Duration:</string>
    <string name="connections">Connections:</string>
    <string name="closest_stops">Closest stops</string>
    <string name="sens_arrival">Arrival</string>
    <string name="sens_departure">Departure</string>
    <string name="whereAmI">Show where I am</string>
    <string name="youAreHere">Your position</string>
    <string name="missingValues">Missing values</string>
    <string name="descMissingValues">One or more missing values.</string>
    <string name="noLocation">No last location</string>
    <string name="descNoLocation">System has no last known location.</string>
    <string name="invalidValues">Invalid stop name(s)</string>
    <string name="descInvalidValuesDep">Please check your departure stop\'s name</string>
    <string name="descInvalidValuesArr">Please check your arrival stop\'s name</string>
    <string name="waitLoc">Waiting location ...</string>
    <string name="waitingForGeolocation">Please wait while we request a more up-to-date geolocation. You can still press \'back\' to use the last known location of the system, if you want.</string>
    <string name="btnShowStops">Lines and stops map</string>
    <string name="stop_info">Stop infos</string>
    <string name="stop_info_msg">Stop name:</string>
    <string name="select_stop">Stop selection</string>
    <string name="select_stop_msg">What do you want to do with stop:</string>
    <string name="your_location">Your location</string>
    <string name="layerSwitcher_enable">Show stops</string>
    <string name="layerSwitcher_disable">Hide stops</string>
    <string name="stops_overlay">Stops overlay are hidden, please use menu to show. Tap on a stop to display the available bus lines. Long tap to select as departure or arrival stop.</string>
    <string name="missing_location">Your system has no last location, so it cannot be displayed on this map.</string>
    <string name="search_stop">Search for a stop</string>
    <string name="stop_search">Stop search</string>
    <string name="stop_search_msg">Enter the name of a stop to search for:</string>
    <string name="no_search_result">No result found!</string>
    <string name="stop_info_msg_lines">The following lines stops here:</string>
    <string name="stop_info_msg_nolines">No line stops here! That looks like a bug :(</string>
    <string name="btnSwitchDepArr">Swap dep and arr</string>
    <string name="askingEnlargement">Asking for enlargement</string>
    <string name="invalidDate">Invalid date</string>
    <string name="descInvalidDate">This date is not compatible with the selected set of stops and lines. Your departure and arrival stops will be cleared and the correct set of data will be loaded.</string>
    <string name="msgTitleWelcome">Welcome!</string>
    <string name="msgDescWelcome">This application is not endorsed to FilBleu. It makes uses of the website to allow you easier access from your mobile device. Do not hesitate to report any bugs.</string>
    <string name="msgTitleWelcomeUp">Welcome to new version!</string>
    <string name="msgDescMajornews">We have to tell you about some new features.</string>
    <string name="msgDescWelcomeUp">Lines and stops data have been regenerated, however some inconsistencies may still be present.</string>
    <string name="display_line">Display lines</string>
    <string name="btnValidLines">Display selection</string>
    <string name="missing_lines">There is not any graph of the lines for the period selected, so we cannot display them.</string>
    <string name="displayLineBeta">Lines displaying is still experimental: some stops might be missing or misplaced.</string>
    <string name="btnShare">Partager</string>
</resources>
