<?xml version="1.0" encoding="utf-8"?>
<!-- vim: set ts=4 sw=4 et: -->
<ScrollView
	android:id="@+id/widget59"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
	android:id="@+id/widget60"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
<LinearLayout
	android:id="@+id/widget67"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">
<TextView
	android:id="@+id/lblStopDeparture"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/lblStopDeparture"
	android:layout_gravity="center_vertical"
    />
</LinearLayout>
<LinearLayout
	android:id="@+id/widget68"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">
<AutoCompleteTextView
	android:id="@+id/txtStopDeparture"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="right"
    android:layout_weight="1"
	/>	
<ImageButton
    android:id="@+id/btnGetClosestStopDeparture"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
	android:layout_gravity="right"
    android:layout_weight="0"
    android:src="@android:drawable/ic_menu_mylocation"
    />
</LinearLayout>
<LinearLayout
	android:id="@+id/widget76"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">
<TextView
	android:id="@+id/lblStopArrival"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/lblStopArrival"
	android:layout_gravity="center_vertical"
    />
</LinearLayout>
<LinearLayout
	android:id="@+id/widget77"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">
<AutoCompleteTextView
	android:id="@+id/txtStopArrival"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="right"
    android:layout_weight="1"
	/>	
<ImageButton
    android:id="@+id/btnGetClosestStopArrival"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
	android:layout_gravity="right"
    android:layout_weight="0"
    android:src="@android:drawable/ic_menu_mylocation"
    />
</LinearLayout>
<LinearLayout
	android:id="@+id/widget61"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">
<DatePicker
	android:id="@+id/date"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    />
</LinearLayout>
<LinearLayout
	android:id="@+id/widget84"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">
<Spinner
    android:id="@+id/Sens"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    android:prompt="@string/sensPrompt"
    />
</LinearLayout>
<LinearLayout
	android:id="@+id/widget79"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">
<TimePicker
	android:id="@+id/time"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    />
</LinearLayout>
<LinearLayout
	android:id="@+id/widget80"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">
<Spinner
	android:id="@+id/listCriteria"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    android:prompt="@string/lblCriteria"
    />
</LinearLayout>
<LinearLayout
	android:id="@+id/widget82"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">
<Button
	android:id="@+id/btnGetJourney"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/btnGetJourney"
	/>
</LinearLayout>
</LinearLayout>
</ScrollView>
